--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,10 @@
         <script src="scripts/controllers/services.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/configuration.js"></script>
+        <script src="scripts/range_core.js"></script>
+        <script src="scripts/range-class.js"></script>
+        <script src="scripts/undo.js"></script>
+        <script src="scripts/medium.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
