--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
+    <script src="bower_components/foundation-sites/dist/foundation.js"></script>
     <script src="bower_components/motion-ui/dist/motion-ui.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
