--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/autocomplete.css">
     <!-- endbuild -->
   </head>
   <body ng-app="friendappApp">
@@ -91,6 +92,7 @@
         <script src="scripts/controllers/services.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/configuration.js"></script>
+        <script src="scripts/controllers/autocomplete.js"></script>
         <script src="scripts/range_core.js"></script>
         <script src="scripts/range-class.js"></script>
         <script src="scripts/undo.js"></script>
