--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/autocomplete.css">
     <!-- endbuild -->
   </head>
   <body ng-app="friendappApp">
@@ -73,7 +74,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -91,10 +92,12 @@
         <script src="scripts/controllers/services.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/configuration.js"></script>
+        <script src="scripts/controllers/autocomplete.js"></script>
         <script src="scripts/range_core.js"></script>
         <script src="scripts/range-class.js"></script>
         <script src="scripts/undo.js"></script>
         <script src="scripts/medium.min.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
