--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/autocomplete.css">
     <!-- endbuild -->
   </head>
@@ -22,7 +23,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-   
+
     <div class="fa-app-wrapper">
     <div id="fb-root"></div>
     <div class="fa-app-view" ng-view=""></div>
