--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <title>Minimie Friendship</title>
+    <meta name="description" content="Appreciate your friends by creating and sending them custom heartwarming themed cards shared via facebook.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
